<resources>
    <string name="app_name">App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="degree_intro">My Nanodegree Apps</string>
    <string name="button_spotify_text">Spotify Streamer</string>
    <string name="button_scores_text">Scores App</string>
    <string name="button_library_text">Library App</string>
    <string name="button_bigger_text">Build it bigger</string>
    <string name="button_reader_text">XYZ Reader</string>
    <string name="button_capstone_text">CAPTSTONE: MY OWN APP</string>
</resources>
