<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="stefan.sprenger.appportfolio.PortfolioMainActivity"
    tools:showIn="@layout/activity_portfolio_main"
    android:weightSum="1"
    android:orientation="vertical"
    android:baselineAligned="true">



    <TextView
        android:layout_width="348dp"
        android:layout_height="64dp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/degree_intro"
        android:id="@+id/textView"
        android:textSize="30sp"
        android:textAlignment="center" />


    <Button
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:text="@string/button_spotify_text"
        android:id="@+id/button_spotify"
        android:background="#fa7b3d" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.05" />
    <Button
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:text="@string/button_scores_text"
        android:id="@+id/button_scores"
        android:background="#fa7b3d" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.05" />
    <Button
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:text="@string/button_library_text"
        android:id="@+id/button_library"
        android:background="#fa7b3d" />


    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.05" />
    <Button
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:text="@string/button_bigger_text"
        android:id="@+id/button_bigger"
        android:background="#fa7b3d" />


    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.05" />
    <Button
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:text="@string/button_reader_text"
        android:id="@+id/button_reader"
        android:background="#fa7b3d" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.05" />
    <Button
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:text="@string/button_capstone_text"
        android:id="@+id/button_capstone"
        android:background="#fa3d43" />
    
</LinearLayout>

